public/styles/common.css
body {
	font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
	font-size: 10pt;
	color: white;
	background-color: #333;
	padding: 0;
	margin: 0;
}

a { color: white; text-decoration: none; }
a:hover { text-decoration: underline; }

.error { color: #f42; }


/******************************************************************************/
/* HEADER                                                                     */
/******************************************************************************/

#mainHeader {
	background-color: #E0D8D0;
	background-image: -webkit-linear-gradient(top, #fff, #D8D0C8);
	background-image:    -moz-linear-gradient(top, #fff, #D8D0C8);
	background-image:     -ms-linear-gradient(top, #fff, #D8D0C8);
	background-image:      -o-linear-gradient(top, #fff, #D8D0C8);
	color: black;
	box-shadow: 0px 0px 20px #222;
}

#mainHeader > div {
	display: table;
	width: 100%;
}

#mainHeader > div > div {
	display: table-row;
}

#mainHeader > div > div > div {
	display: table-cell;
	vertical-align: middle;
}

#mainHeader img.logo {
	display: block;
	float: left;
	vertical-align: top;
	margin: 2.5pt 7.5pt;
	margin-left: 10pt;
}

#mainHeader h1 {
	font-weight: normal;
	font-size: 18pt;
	padding: 2.5pt 15pt;
	padding-top: 7.5pt;
	margin: 0;
}

#mainHeader .loginArea {
	/*width: 200pt;
	position: absolute;
	width: 200pt;
	top: 0;
	right: 15pt;*/
	text-align: right;
	display: table-cell;
	padding: 0 15pt;
	width: 180pt;

}

#mainHeader a { color: #000; }
#mainHeader table { width: 100%; }
#mainHeader td { padding-left: 5pt; }
#mainHeader .loginArea input { width: 100%; }

/******************************************************************************/
/* FOOTER                                                                     */
/******************************************************************************/

footer {
	text-align: center;
	margin-top: 15pt;
	color: #ddd;
}

footer a { color: #eee; }
footer a:hover { color: #fff; }

/******************************************************************************/
/* NAVIGATION                                                                 */
/******************************************************************************/

#mainNav {
	padding: 0 15pt;
	clear: both;
	background-color: #B0A8A0;
	background-image: -webkit-linear-gradient(top, #C8C0B8, #B0A8A0);
	background-image:    -moz-linear-gradient(top, #C8C0B8, #B0A8A0);
	background-image:     -ms-linear-gradient(top, #C8C0B8, #B0A8A0);
	background-image:      -o-linear-gradient(top, #C8C0B8, #B0A8A0);
	box-shadow: 0px 10px 15px #222;
}

#mainNav ul {
	margin: 0;
	padding: 0;
	line-height: 22pt;
}

#mainNav li {
	line-height: 15pt;
	margin: 0;
	display: inline-block;
}

#mainNav li, #mainNav a { color: #000; }

#mainNav a { text-decoration: none; }
#mainNav a:hover { text-decoration: underline; }
#mainNav li:before { content: " » "; }
#mainNav li:first-child:before { content: " "; }
#mainNav { margin-bottom: 15pt; }

#searchbox { float: right; text-align: right; margin-top: 2.5pt; }
#searchbox input { width: 120pt; }
#searchbox button { width: auto; }

/******************************************************************************/
/* CONTENTS                                                                   */
/******************************************************************************/

#content { margin: 0 15pt; clear: both; }

.skeleton h1 {
	font-weight: normal;
	padding: 3.75pt 15pt;
}

a.title {
	font-size: 12pt;
}

#content .inactive td {
	color: #eaa;
}

#content table {
	width: 100%;
	border-spacing: 0;
	border-collapse: collapse;
	box-shadow: 0px 0px 20px #111;
}

#content col.caption {
	width: 150pt;
}

#content th {
	text-align: left;
	padding: 5pt 7.5pt;
	background-color: #666;
	background-image: -webkit-linear-gradient(top, #666, #444);
	background-image:    -moz-linear-gradient(top, #666, #444);
	background-image:     -ms-linear-gradient(top, #666, #444);
	background-image:      -o-linear-gradient(top, #666, #444);
	border-bottom: 1px solid #222;
}

#content td {
	padding: 7.5pt;
	background-color: #eae8dd;
	border-bottom: 1px solid #ddc;
	color: black;
}

#content td a {
	color: black;
}

#content tr.odd td {
	background-color: #fdfdf8;
}

#content tr.even td {
	background-color: #f8f6ec;
}

#content table.overview .avatar {
	float: left;
	margin-right: 5pt;
}
#content table.overview .avatar img {
	border: 1px solid #888;
	vertical-align: middle;
}

blockquote {
	display: block;
	border-left: 2px solid gray;
	margin: 0;
	padding-left: 7.5pt;
	margin-left: 0;
}

input.checkbox { width: auto; }

.link-button {
	display: block;
	margin-top: 7.5pt;
	max-width: 100pt;
	padding: 1pt 3.75pt;
	background-color: #ccc;
	background-image:      -o-linear-gradient(top, #eee, #bbb);
	background-image:    -moz-linear-gradient(top, #eee, #bbb);
	background-image: -webkit-linear-gradient(top, #eee, #bbb);
	border: 1px solid #555;
	border-radius: 3pt;
	text-align: center;
	text-decoration: none;
	color: black;
	clear: both;
}

.active-page {
	padding: 0 1.5pt;
	color: black;
	font-weight: bold;
	border: 1px solid #D0C8C0;
	background-color: #C8C0B8;
	box-shadow: 0px 0px 10px #000;
}

.post {
	margin-bottom: 15pt;
	background-color: #eae8dd;
	/*border: 1px solid #;*/
	color: black;
	box-shadow: 0px 0px 20px #111;
}

.post a { color: black; }

/* clearfix */
.post:after {
	content: ".";
	display: block;
	clear: both;
	visibility: hidden;
	line-height: 0;
	height: 0;
}


.post .post-header {
	background-color: #666;
	background-image: -webkit-linear-gradient(top, #666, #444);
	background-image:    -moz-linear-gradient(top, #666, #444);
	background-image:     -ms-linear-gradient(top, #666, #444);
	background-image:      -o-linear-gradient(top, #666, #444);
	border-bottom: 1px solid #222;
	color: white;
	min-height: 20pt;
	padding: 5pt 15pt;
	padding-bottom: 0pt;
}

.post h2.skeleton {
	margin: 0;
	padding: 0;
	font-size: 12pt;
	font-weight: normal;
	float: left;
}

.post .permalink { color: #aaa; text-align: right; padding: 0; }
.post .permalink a { color: #aaa; }

.post-info {
	width: 180pt;
	float: left;
	padding: 15pt;
}

.post-info img {
	border: 1px solid black;
}

.post-info .posting-info { color: #555; }
.post-info .posting-info a { color: #555; }

.post-content {
	margin: 0;
	margin-left: 210pt;
	padding: 15pt;
	background-color: white;
	border-left: 1px solid #877;
}

.post-content a {
	text-decoration: underline;
}

.post-content pre {
	margin: 7.5;
	overflow: auto;
}

.post-content div {
 	max-width: 60em;
}

.secondary, .secondary a {
	color: #888;
}

input, textarea {
	width: 100%;
	font-size: 10pt;
}

.top-align { vertical-align: top; }

.post-content.markdown-cheatsheet {
	box-sizing: border-box;
	display: block;
	padding: 0 5pt;
	margin: 0;
	font-size: 75%;
	background-color: #f0f0ea;
	border: 1px solid #aaa;
}

#message {
	box-sizing: border-box;
	resize: vertical;
}

#message-preview {
	box-sizing: border-box;
	display: none;
	border: 1px solid #aaa;
	background-color: #eee;
	overflow: auto;
}

#message, #message-preview {
	height: auto;
	margin: 0;
	padding: 7.5pt;
}

/*************/
.post-body { display: table-row; }
.post-info, .post-content { display: table-cell; vertical-align: top; }
.post-content { margin: 0; width: 100%; }


td form { display: inline-block; }
#content th.spam { width: 32pt; }
#content td.spam { background-color: #e52; }
#content td.ham { background-color: #8d4; }
#content td.undecided { background-color: #999; }


/* side-by-side preview pane for post authoring */
@media (min-width: 900pt) {
	#message-area {
		width: 100%;
		display: flex;
		flex-direction: row;
	}
	#message {
		flex: 1;
		resize: none;
		display: block;
		height: auto;
	}
	#message-preview {
		display: block;
		flex: 1;
	}
}


@media (max-width: 580pt) {
	#mainHeader .loginArea { padding-bottom: 7.5pt; }
	#mainHeader > div { display: block; }
	#mainHeader > div > div { display: block; }
	#mainHeader > div > div > div { display: block; }
	#mainHeader h1 { display: block; margin-bottom: 0; }
	#mainHeader .loginArea { display: block; margin: 0 15pt; text-align: left; width: auto; }
	#mainHeader .loginArea div { display: inline-block; }

	#searchbox { position: relative; top: 0; left: 0; width: auto; }

	.post-body { display: block; }
	.post-info, .post-content { display: block; }
	.post-content { margin: 0; width: auto; }

	.post-info {
		float: none;
		width: auto;
	}

	.post-info .avatar {
		float: left;
		margin-right: 15pt;
	}
	/* clearfix */
	.post-info:after {
		content: ".";
		display: block;
		clear: both;
		visibility: hidden;
		line-height: 0;
		height: 0;
	}

	.post-info .avatar img {
		max-width: 96px;
	}

	.post-info .reply-link {
		display: inline-block;
		width: 100pt;
		clear: none;
	}

	.post-content {
		float: none;
		margin-left: 0;
		border-left: none;
		border-top: 1px solid #877;
	}

	table .num-topics { display: none; }
	table .num-posts { display: none; }

	#content col.caption { width: 30%; }
}

@media (max-width: 400pt) {
	#searchbox { display: none; }

	header h1 { font-size: 16pt; }

	.post-info .avatar img {
		max-width: 64px;
	}

	.post-info .reply-link {
		display: block;
		clear: both;
	}

	table .last-post { display: none; }
	table .helptext { display: none; }

	.post h2.skeleton { float: none; }
	.post .permalink { text-align: left; }
}

